# application-service/src/infrastructure/http/routes/user/userRolesValidator.js
@@ -1,0 +1,12 @@
+import yup from "yup";
+
+export default yup
+  .object()
+  .shape({
+    isDriver: yup
+      .boolean()
+      .required("O campo isDriver é obrigatório"),
+    isPassenger: yup
+      .boolean()
+      .required("O campo isPassenger é obrigatório"),
+  }).noUnknown(false);
